support update pause
